[package]
name = "kvs"
version = "0.1.0"
authors = ["wutb <wutb@asiainfo.com>"]
edition = "2018"
description = "A key-value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "~2.33.1", features = ["yaml"]}

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
